--- a/build.gradle
+++ b/build.gradle
@@ -95,6 +95,7 @@ dependencies {
     implementation "com.rabbitmq:amqp-client:5.24.0"
     implementation "com.warrenstrange:googleauth:1.5.0"
     implementation "com.google.openlocationcode:openlocationcode:1.0.4"
+    implementation "com.bucket4j:bucket4j_jdk11-core:8.14.0"
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testImplementation "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
     testImplementation "org.mockito:mockito-core:5.15.2"
